--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
     "axios": "^1.6.8",
+    "clipboard": "^2.0.11",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "react": "^18.2.0",
